--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "yaim",
-  "version": "0.1.0",
-  "private": true,
+  "homepage": "./",
+  "version": "0.0.0",
+  "private": false,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -10,8 +13,10 @@
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
+    "electron": "^13.1.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jss": "^10.7.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
@@ -20,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron ."
   },
   "eslintConfig": {
     "extends": [
