--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
     "electron": "^13.1.9",
+    "i18next": "^20.4.0",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.0",
+    "preval": "0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-git-info": "^2.0.0",
+    "react-i18next": "^11.11.4",
     "react-jss": "^10.7.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
@@ -27,7 +33,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron": "electron ."
+    "electron": "electron .",
+    "electron-dev": "ELECTRON_START_URL=http://localhost:3000 electron .",
+    "electron-dev-win": "set ELECTRON_START_URL=http://localhost:3000 && electron ."
   },
   "eslintConfig": {
     "extends": [
