--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/wicg-file-system-access": "^2020.9.2",
     "electron": "^13.1.9",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
@@ -24,6 +26,7 @@
     "react-git-info": "^2.0.0",
     "react-i18next": "^11.11.4",
     "react-jss": "^10.7.1",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
