--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "@types/wicg-file-system-access": "^2020.9.2",
-    "electron": "^13.1.9",
+    "electron": "^14.0.0",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.0",
+    "is-electron": "^2.2.0",
     "preval": "0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
