--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "homepage": "./",
   "version": "0.0.1",
   "private": false,
-  "main": "electron-prod.js",
+  "main": "main.js",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -17,10 +17,12 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/wicg-file-system-access": "^2020.9.2",
     "electron": "^14.0.0",
+    "esm": "^3.2.25",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.0",
     "is-electron": "^2.2.0",
+    "native-file-system-adapter": "^1.0.1",
     "preval": "0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -38,7 +40,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron": "electron .",
-    "electron-dev": "electron ./electron-dev.js"
+    "electron-dev": "electron . --debug"
   },
   "eslintConfig": {
     "extends": [
